[tool.poetry]
name = "fck-roc-login"
version = "0.1.0"
description = "Tool to automate ROC login to cluster"
authors = ["Shirou-kun <shivanshs9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
python-dotenv = "^1.0.1"
typer = "^0.12.5"
colorlog = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fck-roc-login = "fck_roc_login.main:app"